refactor(logging): 重构日志系统 - 使用LogUtils统一日志记录，配置logback-spring.xml多环境日志策略